--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hack36 | MNNIT Allahabad</title>
+    <title>Webster | MNNIT Allahabad</title>
     <link rel="shortcut icon" type="image/png" href="images/mascot.png"/>
     
     <meta name="og:title" content="Hack36 | Coming Soon | MNNIT Allahabad"/>
@@ -58,7 +58,7 @@
         <div class="center"></div>
         <div class="right"><div></div>
             <div>
-                <p><a href="https://github.com/jewel998/hack36-2020">Open source at github.</a> Copyright &copy; 2020 Hack36.</p>
+                <p><a href="https://github.com/nimesh12maheshwari/webster-2020">Open source at github.</a> Copyright &copy; 2020 Webster.</p>
             </div>
     </div>
 </header>
@@ -67,11 +67,11 @@
 
     <!-- The Starting Info Over Here -->
     <div id="starting-info">
-        <h3 class="light">Hack36 is here!</h3>
-        <h2>Coming Soon!</h2><!--FEBRUARY 14-15 2020-->
-        <h1 class="brand">HACK<span>36</span> &nbsp;<span>2020</span></h1>
-        <p>A <span>36-hour</span> tryst with gizmos, infused with youthful energy and a relentless drive for development, this is the <span>3rd edition</span> of the anuual Hackathon conducted by MNNIT Allahabad. Hack36 holds in store, challenges expecting to be conquered and solutions awaiting to be uncovered, for all the <span>tech-savy</span> and geeks, coders and development <span>ethusiasts</span>.</p><br>
-        <p>So, caffeinate, collaborate, celebrate; work, solve and work harder, reverberating the <span>essence</span> of the hackathon, "Every once in a while, a new <span>technology</span>, an old problem and a big idea turn into an innovation".<br><a href="https://tinyurl.com/hack36-brochure" style="color:var(--brand-color-1);">-- Download Brochure --</a></p>
+        <h3 class="light">Webster is here!</h3>
+        <h2>10 Oct - 3 Nov</h2><!--FEBRUARY 14-15 2020-->
+        <h1 class="brand">Webster &nbsp;<span>2020</span></h1>
+        <p>A tryst with gizmos, infused with youthful energy and a relentless drive for development, this is one of the hackathon event conducted under <span>Avishkar</span>. Webster holds in store, challenges expecting to be conquered and solutions awaiting to be uncovered, for all the <span>tech-savy</span> and geeks, coders and development <span>ethusiasts</span>.</p><br>
+        <p>So, work, solve and work harder, reverberating the <span>essence</span> of the hackathon, "Every once in a while, a new <span>technology</span>, an old problem and a big idea turn into an innovation".<br><a href="https://avishkar.mnnit.ac.in/" style="color:var(--brand-color-1);">-- Register Here --</a></p>
     </div>
 
 
@@ -138,7 +138,7 @@
         </g>
         </g>
         </svg>
-        <div id="logo-center"><img src="images/logo.png"></div>
+        <div id="logo-center"><img src="images/logo2.jpeg"></div>
     </div>
 
 
@@ -156,58 +156,16 @@
         <div><a class="FAQ-button"><i class="fa fa-question"></i>FAQ</a><a>FAQ<i class="fa fa-question"></i></a>
             <div id="FAQ" class="bottom-left" style="text-align:left">
                 <div class="question">Do I Need To Pay Any Money To Register For The Hackathon?<div class="answer">No. You do not have to pay anything to anyone to register yourself for Hack36</div></div>
-                <div class="question">What If I Feel Hungry And Sleepy?<div class="answer">Accommodation and food are absolutely free.</div></div>
-                <div class="question">Will Expenses Be Reimbursed?<div class="answer">Travel expenses will have to be taken care by you.</div></div>
-                <div class="question">How Can I Reach Prayagraj?<div class="answer">Prayagraj is well connected to major cities like Lucknow, Kanpur, Varanasi and Delhi via Airways, Railways and Roadways.</div></div>
                 <div class="question">What We Can Build?<div class="answer">You can build anything you are passionate about like some web app, mobile app or something using hardware.</div></div>
                 <div class="question">Who Can Apply?<div class="answer">Anyone having a knack of solving real life problems can apply for the hackathon.</div></div>
                 <div class="question">How Will The Shortlisting Be Done?<div class="answer">Participants will be shortlisted based on their GitHub profile and resume.</div></div>
                 <div class="question">What Is The Procedure Of Forming A Team?<div class="answer">After registration, participants are required to form their team by logging in.</div></div>
-                <div class="question">What Can Be The Size Of Team?<div class="answer">A team can consist of 2 to 4 members.</div></div>
+                <div class="question">What Can Be The Size Of Team?<div class="answer">A team can consist of 2 to 3 members.</div></div>
                 <div class="question">What Is The Criteria For Selection Of A Team?<div class="answer">If 50% members of a team have decent profile, the team will get shortlisted. In a rare case where a team of 4 members is not shortlisted but 1 member of the team has good profile, that individual member will be shortlisted for the hackathon. That member can form team with other individual members at the event itself.</div></div>
             </div>
         </div>
 
 
-        <!--Judges Button & Panel-->
-        <div><a class="judges-button"><i class="fa fa-gavel"></i>Judges</a><a class="judges-button">Judges<i class="fa fa-gavel"></i></a><div class="bottom-left"><p>Speakers from our sponsors will present on topics ranging from technology to the development of professional skills. A detailed schedule of talks will be sent to hackers.</p></div>
-            <div id="judge-box" class="bottom-left">
-                <h1 style="text-align:left;padding-left:15px;">PAST JUDGES</h1>
-                <div class="judge">
-                  <div class="judge-info">
-                    <div class="judge-image"><img src="images/Anand.jpg"></div>
-                    <div>
-                      <div class="judge-name">Anand Mahajan</div>
-                      <div class="judge-designation">CEO at Sphinx Solutions</div>
-                    </div>
-                  </div>
-                  <div class="judge-about">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem architecto nisi, totam soluta, fuga aspernatur veniam itaque ipsum illo in aliquid alias repellat cum? Repudiandae voluptate expedita vel ea eos!</div>
-                  <div class="profile-link"><a href="https://www.linkedin.com/in/mahajananand">View Profile</a></div>
-                </div>
-                <div class="judge">
-                  <div class="judge-info">
-                    <div class="judge-image"><img src="images/Akash.jpeg"></div>
-                    <div>
-                      <div class="judge-name">Akash Takyar</div>
-                      <div class="judge-designation">CEO at Leewayhertz</div>
-                    </div>
-                  </div>
-                  <div class="judge-about">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus in velit corrupti ullam qui cumque quidem sapiente, accusantium culpa illo aperiam quas earum similique quisquam ad quae, iusto quam. Consectetur.</div>
-                  <div class="profile-link"><a href="https://www.linkedin.com/in/akashtakyar">View Profile</a></div>
-                </div>
-                <div class="judge">
-                  <div class="judge-info">
-                    <div class="judge-image"><img src="images/Kanav.jpg"></div>
-                    <div>
-                      <div class="judge-name">Kanav Arora</div>
-                      <div class="judge-designation">VP of Engineering at Urbanclap</div>
-                    </div>
-                  </div>
-                  <div class="judge-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, odit! Adipisci reiciendis, iste eius aperiam, provident asperiores velit assumenda rerum laborum ipsa corporis consequuntur ut repellendus minima quae officiis consequatur.</div>
-                  <div class="profile-link"><a href="https://www.linkedin.com/in/kanav-arora">View Profile</a></div>
-                </div>
-            </div>
-        </div>
 
         <!-- Prizes Button & Panel -->
         <div><a class="prizes-button"><i class="fa fa-trophy"></i>Prizes</a><a class="prizes-button">Prizes<i class="fa fa-trophy"></i></a><div class="up-left"><p>Many attractive and cool prizes for every participants.There's a special prize for best girls group.</p></div>
@@ -216,21 +174,21 @@
                     <div>
                         <div>2</div>
                         <div><i class="fa fa-trophy"></i></div>
-                        <div>Rs. 15,000</div>
+                        <div>Rs. 1,500</div>
                     </div>
                     <div>
                         <div>1</div>
                         <div><i class="fa fa-trophy"></i></div>
-                        <div>Rs. 25,000</div>
+                        <div>Rs. 2,500</div>
                     </div>
                     <div>
                         <div>3</div>
                         <div><i class="fa fa-trophy"></i></div>
-                        <div>Rs. 10,000</div>
+                        <div>Rs. 1,000</div>
                     </div>
                 </div>
-                <h3 style="text-align:center;letter-spacing:1px;">Best All Girls Team Winner: Rs. 5,000</h3>
-                <div class="participation-prize">
+                <h3 style="text-align:center;letter-spacing:1px;">Best All Girls Team Winner: Rs. 1,000</h3>
+                <!-- <div class="participation-prize">
                     <h1 style="width:100%;">PARTICIPATION PRIZES</h1>
                     <div>
                         <div><a href="https://www.zulipchat.com"><img src="images/zulip.png"></a></div>
@@ -268,7 +226,7 @@
                         <div><a><img src="images/logo.png"></a></div>
                         <p>Stickers, T-shirts and other goodies.</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -277,10 +235,9 @@
             <div id="sponsors-box" class="bottom-left">
                 <div style="text-align:center">
                     <h1>PAST HIGHLIGHTS</h1>
-                    <p>The sponsors and benefactors of the previous editions of Hack36 include renowed companies like Paytm, Zulip, Himalayan Weekenders, Creative Tim, Linode, Hasura, TechGig, WolframAlpha, Balsamiq, CloudSploit, Skillenza and many more.</p>
-                    <p>Past Judges include eminent entrepreneurs and engineerslike Akash Takyar, Founder and CEO, LeewayHertz; Anand Mahajan, CEO, Sphinx Solutions; Kanav Arora, Vice President Engineering, UrbanClap. The participants also got a chance to interact with dynamic personalities like Quincy Larson, founder of 'freeCodeCamp', and Nilay Kulkarni, co-founder of 'Ashioto Analytics' and speaker at MIT Emerging Worlds, Boston; TEDNYC, New York; Unleash 2017, Madrid and Descon 2017, Serbia.</p>
+                    <p>The sponsors and benefactors of the previous editions of Webster include renowed companies like Paytm, Zulip, Himalayan Weekenders, Creative Tim, Linode, Hasura, TechGig, WolframAlpha, Balsamiq, CloudSploit, Skillenza and many more.</p>
                 </div>
-                <div id="sponsors-logo">
+                <!-- <div id="sponsors-logo">
                     <div><a href="https://creative-tim.com"><img src="images/CreativeTim.png"></a></div>
                     <div><a href="https://balsamiq.com"><img src="images/balsamiq_logo.svg"></a></div>
                     <div><a href="https://www.bugsee.com"><img src="images/bugsee.svg"></a></div>
@@ -299,7 +256,38 @@
                     <div><a href="https://www.teqip.in"><img src="images/TEQIP.png"></a></div>
                     <div><a href="https://wolframalpha.com"><img src="images/Wolfram.png"></a></div>
                     <div><a href="https://zulipchat.com"><img src="images/zulip.png"></a></div>
-                </div>
+                </div> -->
+            </div>
+        </div>
+
+        <!--Teams-->
+        <div class=""><a class="team-button"><i class="fa fa-users"></i>Team</a><a class="team-button">Team<i class="fa fa-users"></i></a><div class="up-left"><p>The amazing group of people who worked hard to make this event happen.</p></div>
+            <div id="sponsors-box" class="bottom-left">
+                <div style="text-align:center;margin-bottom:30px">
+			<h1>TEAM</h1>
+			<p style="width:60%;margin:0 auto;">This is the great team of people who made it happen and then we'll keep growing better and better. Cheers!</p>
+		</div>
+		<div class="team-members" style="text-align: center;">
+			<div class="team-member">
+				<div class="team-member-details"><h3>Anuj Modi</h3><p>Branch Coordinator</p></div>
+			</div>
+			<div class="team-member">
+				<div class="team-member-details"><h3>Arsh Singh</h3><p>Branch Coordinator</p></div>
+			</div>
+			<div class="team-member">
+				<div class="team-member-details"><h3>Gaurav Katare</h3><p>Branch Coordinator</p></div>
+			</div>
+			<div class="team-member">
+				<div class="team-member-details"><h3>Nitin Doodhiya</h3><p>Event Coordinator</p></div>
+			</div>
+			<div class="team-member">
+				<div class="team-member-details"><h3>Mohit Dogra</h3><p>Event Coordinator</p></div>
+			</div>
+			<div class="team-member">
+				<div class="team-member-details"><h3>Tanisha Kumbhakar</h3><p>Event Coordinator</p></div>
+			</div>
+			
+		</div>
             </div>
         </div>
     </div>
@@ -311,16 +299,14 @@
     <div class="center">
         <!--Add links right here for social and email -->
         <div>
-            <a href="https://www.facebook.com/hack36mnnit/"><i class="fa fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/hack36_/"><i class="fa fa-instagram"></i></a>
-            <a href="https://twitter.com/hack36mnnit"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.facebook.com/groups/859475837517172/"><i class="fa fa-facebook-f"></i></a>
             <a href="mailto:hackathon@mnnit.ac.in"><i class="fa fa-envelope"></i></a>
         </div>
     </div>
     <div class="right">
         <div></div>
         <div>
-            <a href="https://jewel998.github.io">Jewel</a>
+            <a href="https://github.com/nimesh12maheshwari/webster-2020">Jewel</a>
         </div>
     </div>
   </div>
