--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <!--Add links right here for social and email -->
         <div>
             <a href="https://www.facebook.com/groups/859475837517172/"><i class="fa fa-facebook-f"></i></a>
-            <a href="mailto:hackathon@mnnit.ac.in"><i class="fa fa-envelope"></i></a>
+            <a href="mailto:computer.club@mnnit.ac.in"><i class="fa fa-envelope"></i></a>
         </div>
     </div>
     <div class="right">
